[package]
name = "xyzvec"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/schism-pl/xyzvec"
homepage = "https://github.com/schism-pl/xyzvec"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/schism-pl/xyzvec"
description = "Statically allocated fixed-size vectors for working in 2 and 3 dimensions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fmt = "0.1.0"
